# vp-bot

./: .env  bat.db  pyproject.toml
mock_data/: route_stop.csv  routes.csv  schedule.csv  stops.csv
src/: config.py  constants.py  main.py
src/database/: database.py  models.py
src/handlers/: cancel_handler.py  error_handler.py  start_handler.py
src/handlers/conversations/: about.py  buses.py  news.py  settings.py
src/handlers/conversations/buses/: __init__.py  bus_menu_handlers.py  enums.py  keyboards.py  menu_handlers.py  messages.py  route_handlers.py  route_stop_handlers.py  schedule_handlers.py  stops_handlers.py
src/handlers/conversations/buses_utils/: add_stops_handlers.py  base_handler.py  bus_menu_handlers.py  constants.py  csv_handlers.py  data_manager.py  enums.py  keyboards.py  location_handlers.py  messages.py  route_handlers.py  stops_handler.py
src/handlers/conversations/buses_utils/handlers/: add_stops_handlers.py  bus_menu_handlers.py  csv_handlers.py  route_handlers.py  stops_handler.py
src/handlers/menus/: main.py
src/services/: __init__.py  admin.py  base.py  bus_route.py  bus_route_stop.py  bus_schedule.py  bus_stop.py  user.py
src/utils/: base_handler.py  csv_handler.py
